--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "happy-coaching-react-typescript",
+  "name": "happy-coaching",
   "private": true,
   "version": "0.0.0",
   "type": "module",
